version 1.7.14 - update to 26.3